fix: restructure entity layer